fix rendering of video game card on smaller viewports

--- a/client/src/sass/abstracts/_mixins.scss
+++ b/client/src/sass/abstracts/_mixins.scss
@@ -65,9 +65,8 @@
   margin-top: $xlg-spacing;
   width: 23rem;
 
-  @include setBreakPoints(400) {
+  @include setBreakPoints(450) {
     width: 100%;
-    height: 50rem;
   }
 }
 
